2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
	Added x86 support (fixed FourCharCode swapping issues).

2006-07-05  Laurent Sansonetti  <lsansonetti@apple.com>

	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa_sdef.c, src/rbosa.h,
	  sample/sdef.rb, sample/iTunes_control.rb, sample/iTunes_inspect.rb:
	API change: OSA.app() is splited in 4 sub-methods: OSA.app_with_name(),
	OSA.app_with_path(), OSA.app_with_bundle_id() and OSA.app_with_signature.

	* src/lib/rbosa.rb:
	Convert null elements to nil (fix by Vincent Isambart).

	* sample/iTunes_control.rb:
	When starting and if there is currently no track, select the first one 
	and play it.

	* TODO:
	Reformat.

2006-06-27  Laurent Sansonetti  <lsansonetti@apple.com>

	* COPYRIGHT, ChangeLog, README, TODO, extconf.rb, 
	  sample/iTunes_control.rb, sample/iTunes_inspect.rb, sample/sdef.rb, 
	  src/rbosa.c, src/rbosa.h, src/rbosa_conv.c, src/rbosa_sdef.c, 
	  lib/rbosa.rb:
	Initial RubyForge revision.