@@ -1,5 +1,12 @@
 2006-07-10  Laurent Sansonetti  <lsansonetti@apple.com>
 
+	* sample/iTunes_control.rb:
+	Reverted last change since it does not seem to work... print a message
+	in the meantime we don't support write operations.
+
+	* src/lib/rbosa.rb:
+	Do not print warning messages unless $VERBOSE is set.
+
 	* src/lib/rbosa.rb, src/rbosa.c, src/rbosa.h, src/rbosa_conv.c:
 	Added x86 support (fixed FourCharCode swapping issues).
 
